Site Docs update - Adds information for developers, getting started and installation guide.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1185125 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/_navigation.haml
+++ b/site/content/_navigation.haml
@@ -3,8 +3,9 @@ filter: haml
 ---
 - menu = [ { :href => "index.html", :title => "Deltacloud Home", :text => "Home" }, |
   { :href => "download.html", :title => "Get the latest releases", :text => "Download" }, |
-  { :href => "contribute.html", :title => "Information about design/development process", :text => "Contribute" }, |
-  { :href => "documentation.html", :title => "Project documentation", :text => "Documentation" } ] |
+  { :href => "developers.html", :title => "Information for developers", :text => "Developers" }, |
+  { :href => "documentation.html", :title => "Project documentation", :text => "Documentation" }, |
+  { :href => "contact.html", :title => "Contact us!", :text => "Contact"} ] |
 
 #navigation
   #menu.container
