CIMI: Fix the use of camelize method so that the first character is not capped
Signed-off-by: Tong Li <litong01@us.ibm.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1188636 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/cimi/cloudEntryPoint/index.xml.haml
+++ b/server/views/cimi/cloudEntryPoint/index.xml.haml
@@ -5,5 +5,5 @@
   %description cloud entry point
   %created= Time.new.getutc.to_s
   - @collections.each do |api|
-    - res_name = api[0].to_s.camelize
+    - res_name = api[0].to_s.camelize(:lower_case_first_letter)
     = "<#{res_name} href=\"#{api[1]}\"/>"
