Core: Updated views to support InstanceAddress. Get rid of address type guessing and formating
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1199711 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -28,10 +28,10 @@
         default
     %li{ :'data-role' => 'list-divider'} Public addresses
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@instance.public_addresses.map.join(',')
+      %p{ :'data-role' => 'fieldcontain'}=@instance.public_addresses.join(',')
     %li{ :'data-role' => 'list-divider'} Private addresses
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@instance.private_addresses.map.join(',')
+      %p{ :'data-role' => 'fieldcontain'}=@instance.private_addresses.join(',')
     - if @instance.password or @instance.keyname
       %li{ :'data-role' => 'list-divider'} Authentication
     - if @instance.password
