--- a/clients/cimi/views/machines/index.haml
+++ b/clients/cimi/views/machines/index.haml
@@ -8,6 +8,9 @@
     %li.active
       MachineCollection
 
+- content_for :actions do
+  %p
+    %a{ :href => '/cimi/machines/new', :class => 'btn info'} New machine 
 
 %blockquote
   %p
