CIMI: Added links to JSON and XML in CIMI UI
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1211498 13f79535-47bb-0310-9956-ffa450edef68

--- a/clients/cimi/views/cloud_entry_point/index.haml
+++ b/clients/cimi/views/cloud_entry_point/index.haml
@@ -5,6 +5,11 @@
     %li.active
       CloudEntryPoint
 
+- content_for :actions do
+  %p
+    %a{ :href => "#{@entry_point.uri}?format=xml", :class => 'label warning' } XML
+    %a{ :href => "#{@entry_point.uri}?format=json", :class => 'label warning' } JSON
+
 %blockquote
   %p
     The Cloud Entry Point represents the entry point into the cloud defined by
