--- a/clients/cimi/views/machine_images/index.haml
+++ b/clients/cimi/views/machine_images/index.haml
@@ -8,6 +8,10 @@
     %li.active
       MachineImageCollection
 
+- content_for :actions do
+  %p
+    %a{ :href => "#{@machine_images.uri}?format=xml", :class => 'label warning' } XML
+    %a{ :href => "#{@machine_images.uri}?format=json", :class => 'label warning' } JSON
 
 %blockquote
   %p 
