--- a/clients/cimi/views/volume_configurations/index.haml
+++ b/clients/cimi/views/volume_configurations/index.haml
@@ -7,7 +7,10 @@
       %span.divider="/"
     %li.active
       VolumeConfigurationCollection
-
+- content_for :actions do
+  %p
+    %a{ :href => "#{@volume_configurations.uri}?format=xml", :class => 'label warning' } XML
+    %a{ :href => "#{@volume_configurations.uri}?format=json", :class => 'label warning' } JSON
 
 %blockquote
   %p
