--- a/clients/cimi/views/machine_templates/index.haml
+++ b/clients/cimi/views/machine_templates/index.haml
@@ -19,3 +19,13 @@
   - @machine_templates.machine_templates.each do |temp|
     %li
       %a{ :href => "/cimi/machine_templates/#{temp.href.split('/').last}"}=temp.href.split('/').last
+
+%h3 Collection details
+
+%dl
+  %dt URI
+  %dd=@machine_templates.uri
+  %dt Description
+  %dd=@machine_templates.description
+  %dt Created
+  %dd=@machine_templates.created
