--- a/clients/cimi/views/volumes/index.haml
+++ b/clients/cimi/views/volumes/index.haml
@@ -23,3 +23,13 @@
   - @volumes.volumes.each do |volume|
     %li
       %a{ :href => "/cimi/volumes/#{volume.href.split('/').last}"}=volume.href.split('/').last
+
+%h3 Collection details
+
+%dl
+  %dt URI
+  %dd=@volumes.uri
+  %dt Description
+  %dd=@volumes.description
+  %dt Created
+  %dd=@volumes.created
